crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_if_elif_else.snap
---
source: ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    If(
        StmtIf {
            range: 0..28,
            test: Constant(
                ExprConstant {
                    range: 3..4,
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            ),
            body: [
                Expr(
                    StmtExpr {
                        range: 6..8,
                        value: Constant(
                            ExprConstant {
                                range: 6..8,
                                value: Int(
                                    10,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            elif_else_clauses: [
                ElifElseClause {
                    range: 9..19,
                    test: Some(
                        Constant(
                            ExprConstant {
                                range: 14..15,
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 17..19,
                                value: Constant(
                                    ExprConstant {
                                        range: 17..19,
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ),
                    ],
                },
                ElifElseClause {
                    range: 20..28,
                    test: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 26..28,
                                value: Constant(
                                    ExprConstant {
                                        range: 26..28,
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ],
        },
    ),
]
