crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_lambda.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..18,
            value: Lambda(
                ExprLambda {
                    range: 0..18,
                    parameters: Parameters {
                        range: 7..11,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 7..8,
                                def: Parameter {
                                    range: 7..8,
                                    arg: Identifier {
                                        id: "x",
                                        range: 7..8,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 10..11,
                                def: Parameter {
                                    range: 10..11,
                                    arg: Identifier {
                                        id: "y",
                                        range: 10..11,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    body: BinOp(
                        ExprBinOp {
                            range: 13..18,
                            left: Name(
                                ExprName {
                                    range: 13..14,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            op: Mult,
                            right: Name(
                                ExprName {
                                    range: 17..18,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ),
]
